# feynman

./: .buildinfo  .gitignore  ACKNOLEDGMENTS  HiggsFeynmanDiagrams.ipynb  MANIFEST.in  Makefile  PROTO-README  README.md  README.rst  diagram.html  genindex.html  index.html  line.html  objects.inv  operator.html  pyproject.toml  search.html  searchindex.js  setup.py  vertex.html
_downloads/: plot_Dyson.py  plot_LFV.ipynb  plot_P.py  plot_P_RPA.ipynb  plot_P_RPA.py  plot_VBF.py  plot_VH.ipynb  plot_dchp1.py  plot_dchp2.ipynb  plot_eph.ipynb  plot_multi.ipynb  plot_ttH.py
_sources/auto_examples/: index.rst.txt
auto_examples/: index.html
auto_examples/Particle_Physics/: plot_LFV.html  plot_VBF.html  plot_VBF_tautau.html  plot_VH.html  plot_dchp1.html  plot_dchp2.html  plot_ggFZZ_EFT.html  plot_ggF_EFT.html  plot_ggF_SM.html  plot_ttH.html
auto_examples/Solid_State_Physics/: plot_Dyson.html  plot_Fock.html  plot_Gamma.html  plot_P.html  plot_P_RPA.html  plot_eph.html  plot_multi.html  plot_sigma_GW.html
docs/: Makefile  README_dev.md  conf.py
docs/auto_examples/: index.rst
documentation/: Makefile  conf.py  diagram.rst  index.rst  line.rst  operator.rst  vertex.rst
documentation/source/: conf.py  (+5 more)
examples/: contributors.txt  fock.py  gw-Gamma.py  gw-P.py  gw-Sigma.py  gw-W.py  gw-epsilon.py  hedin-Gamma.py  hedin-P.py  hedin-Sigma.py  hedin-dyson.py  phonons-Sigma.py
feynman/: .core.py.swp  __init__.py  colors.py  constants.py  core.py  diagrams.py  lines.py  utils.py  vectors.py
feynman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+141 files in other folders)
