[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feynman"
version = "2.1.1"
authors = [
  { name="Gabriel Antonius", email="gabriel.antonius@gmail.com" },
]
description = "Feynman diagrams with python-matplotlib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=1.1",
    "numpy>=1.6",
    ]
license = {text = "GPL"}

[project.urls]
"Homepage" = "https://github.com/GkAntonius/feynman"
"Bug Tracker" = "https://github.com/GkAntonius/feynman/issues"


